scoreboard and game object added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="info">
+        Money: <span class="score">0</span>$
+    </div>
     <div class="wrapper">
         <div class="static-image">
             <img src="./image/bg.jpg" alt="image1">
@@ -17,6 +20,9 @@
         <div class="dynamic-image">
             <img src="./image/bg.jpg" alt="image2">
             <div class="shadow"></div>
+            <div class="object" data-amount="100">
+                <span>100$</span>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
