--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <div class="info">
         Money: <span class="score">0</span>$
     </div>
+    <div class="settings">
+        <label for="invert">Invert
+            <input type="range" id="invert" min="1" max="100" step="1">
+        </label>
+        <label for="sepia">Sepia
+            <input type="range" id="sepia" min="1" max="100" step="1">
+        </label>
+    </div>
     <div class="wrapper">
         <div class="static-image">
             <img src="./image/bg.jpg" alt="image1">
