add saturate filter

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <label for="sepia">Sepia
             <input type="range" id="sepia" min="1" max="100" step="1">
         </label>
+        <label for="saturate">Saturate
+            <input type="range" id="saturate" min="1" max="100" step="1">
+        </label>
     </div>
     <div class="wrapper">
         <div class="static-image">
