--- a/index.html
+++ b/index.html
@@ -13,16 +13,24 @@
     <div class="info">
         Money: <span class="score">0</span>$
     </div>
-    <div class="settings">
-        <label for="invert">Invert
-            <input type="range" id="invert" min="1" max="100" step="1">
-        </label>
-        <label for="sepia">Sepia
-            <input type="range" id="sepia" min="1" max="100" step="1">
-        </label>
-        <label for="saturate">Saturate
-            <input type="range" id="saturate" min="1" max="100" step="1">
-        </label>
+    <div class="controlls">
+        <button class="controlls__open">Open</button>
+        <div class="settings">
+            <label for="invert">Invert
+                <input type="range" id="invert" min="1" max="100" step="1">
+            </label>
+            <label for="sepia">Sepia
+                <input type="range" id="sepia" min="1" max="100" step="1">
+            </label>
+            <label for="saturate">Saturate
+                <input type="range" id="saturate" min="1" max="100" step="1">
+            </label>
+            <div class="shop">
+                <button class="shop__btn">Get smth1</button>
+                <button class="shop__btn">Get smth2</button>
+                <button class="shop__btn">Get smth3</button>
+            </div>
+        </div>
     </div>
     <div class="wrapper">
         <div class="static-image">
